data/all_generated_tests/raw_wast_tests/nop_IncorrectBranchTargetResolution_3.wast
;; 4. **Test Description: `br_table` Multiple Targets with Interspersed `nop`**    - **Scenario**: Use `br_table` to define multiple branching targets, interspersed with `nop` instructions.    - **Constraint**: Ensures `nop` does not affect the proper indexing and resolution of targets by `br_table`.    - **Context**: Mislabeling induced by `nop` can lead to jumping to incorrect code segments as per the table.

(assert_invalid
  (module
    (func (block $label0
            nop
            br_table $label0 $label0 i32.const 0
    ))
  )
  "type mismatch"
)